--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
-  <!-- Placeholder Logo -->
-  <img src="https://via.placeholder.com/150" alt="BuildMate Logo" class="logo">
+  <!-- Logo -->
+  <img src="./logo.png" alt="BuildMate Logo" class="logo">
 
   <!-- Heading -->
   <h1>BuildMate</h1>
