--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description"
           content="BuildMate Zimbabwe - Coming August 2025! Nationwide supplier of bricks, cement, sand & stones. Transport services across Zimbabwe. Launching in 2025.">
     <meta name="keywords"
-          content="construction materials Zimbabwe, bricks Harare, PPC cement, khaya cement, pitsand, riversand, 3/4 stones, transport services Zimbabwe">
+          content="riversand, pitsand, 3/4 stone, bricks, compressed bricks, common bricks, load bearing bricks, building materials, builders, architects, construction, construction materials, bricks Zimbabwe, bricks Harare, stones Harare">
     <meta name="author" content="BuildMate Zimbabwe">
 
     <!-- Open Graph / Social Media Meta Tags -->
