--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <meta name="description"
           content="BuildMate Zimbabwe - Coming August 2025! Nationwide supplier of bricks, cement, sand & stones. Transport services across Zimbabwe. Launching in 2025.">
     <meta name="keywords"
-          content="riversand, pitsand, 3/4 stone, bricks, compressed bricks, common bricks, load bearing bricks, building materials, builders, architects, construction, construction materials, bricks Zimbabwe, bricks Harare, stones Harare">
+          content="riversand prices in zimbabwe,riversand for sale in harare, pitsand prices in zimbabwe, pitsand for sale in harare, 3/4 stones prices in zimbabwe, 3/4 stones prices in harare, bricks prices in zimbabwe, bricks prices in zimbabwe,
+          ,bricks, common bricks, compressed bricks, load bearing bricks, building materials supplier, floor plans zimbabwe, bill of quantities zimbabwe, boq zimbabwe, builders, architects, construction, construction materials, bricks Zimbabwe, bricks Harare, stones Harare">
     <meta name="author" content="BuildMate Zimbabwe">
 
     <!-- Open Graph / Social Media Meta Tags -->
