--- a/index.html
+++ b/index.html
@@ -7,8 +7,27 @@
     <meta name="description"
           content="BuildMate Zimbabwe - Coming August 2025! Nationwide supplier of bricks, cement, sand & stones. Transport services across Zimbabwe. Launching in 2025.">
     <meta name="keywords"
-          content="riversand prices in zimbabwe,riversand for sale in harare, pitsand prices in zimbabwe, pitsand for sale in harare, 3/4 stones prices in zimbabwe, 3/4 stones prices in harare, bricks prices in zimbabwe, bricks prices in zimbabwe,
-          ,bricks, common bricks, compressed bricks, load bearing bricks, building materials supplier, floor plans zimbabwe, bill of quantities zimbabwe, boq zimbabwe, builders, architects, construction, construction materials, bricks Zimbabwe, bricks Harare, stones Harare">
+          content="
+          where to buy 3/4 stones in harare,
+          3/4 stones prices in harare,
+          where to buy riversand in harare,
+          riversand prices in harare,
+          where to buy pitsand in harare,
+          pitsand prices in harare,
+          where to buy cement in harare,
+          cement prices in harare,
+          where to buy bricks in harare,
+          bricks prices in harare,
+          get floor plans in zimbabwe,
+          get a bill of quantities in zimbabwe,
+          building materials prices in zimbabwe,
+          3/4 stones
+          riversand,
+          pitsand,
+          bricks,
+          cement,
+          construction in zimbabwe,
+          building a house in zimbabwe">
     <meta name="author" content="BuildMate Zimbabwe">
 
     <!-- Open Graph / Social Media Meta Tags -->
