added site_name to google search results

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     <meta name="author" content="BuildMate Zimbabwe">
 
     <!-- Open Graph / Social Media Meta Tags -->
+    <meta property="og:site_name" content="BuildMate Zimbabwe">
     <meta property="og:title" content="BuildMate Zimbabwe | Construction Materials Nationwide (Coming 2025)">
     <meta property="og:description"
           content="Premier supplier of bricks, cement, sand & stones with nationwide transport services. Launching soon across Zimbabwe.">
@@ -51,11 +52,19 @@
     <link rel="icon" href="favicon.ico" type="image/x-icon">
 
     <!-- Google Tag Manager -->
-    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-            new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-        j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-        'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-    })(window,document,'script','dataLayer','GTM-K9MBBS7Z');</script>
+    <script>(function (w, d, s, l, i) {
+        w[l] = w[l] || [];
+        w[l].push({
+            'gtm.start':
+                new Date().getTime(), event: 'gtm.js'
+        });
+        var f = d.getElementsByTagName(s)[0],
+            j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : '';
+        j.async = true;
+        j.src =
+            'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
+        f.parentNode.insertBefore(j, f);
+    })(window, document, 'script', 'dataLayer', 'GTM-K9MBBS7Z');</script>
     <!-- End Google Tag Manager -->
     <!-- Schema Markup -->
     <script type="application/ld+json">
@@ -242,8 +251,10 @@
 </head>
 <body>
 <!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-K9MBBS7Z"
-                  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<noscript>
+    <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-K9MBBS7Z"
+            height="0" width="0" style="display:none;visibility:hidden"></iframe>
+</noscript>
 <!-- End Google Tag Manager (noscript) -->
 <!-- Contact Bar -->
 <div class="contact-bar">
@@ -254,10 +265,10 @@
 <header>
     <div class="coming-soon-container">
         <div class="logo">
-            <img src="logo-horizontal.jpg" alt="BuildMate Zimbabwe Logo" class="logo-img" >
+            <img src="logo-horizontal.jpg" alt="BuildMate Zimbabwe Logo" class="logo-img">
         </div>
-<!--        <div class="company-name">BuildMate Zimbabwe</div>-->
-<!--        <div class="tagline">Your Nationwide Construction Solutions Partner</div>-->
+        <!--        <div class="company-name">BuildMate Zimbabwe</div>-->
+        <!--        <div class="tagline">Your Nationwide Construction Solutions Partner</div>-->
     </div>
 </header>
 
