--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
-          content="BuildMate Zimbabwe - Coming August 2025! Nationwide supplier of bricks, cement, sand & stones. Transport services across Zimbabwe. Launching in 2025.">
+          content="BuildMate Zimbabwe - Coming August 2025! Nationwide supplier of bricks, sand & stones. Transport services across Zimbabwe. Launching in 2025.">
     <meta name="keywords"
           content="
           where to buy 3/4 stones in harare,
@@ -14,8 +14,6 @@
           riversand prices in harare,
           where to buy pitsand in harare,
           pitsand prices in harare,
-          where to buy cement in harare,
-          cement prices in harare,
           where to buy bricks in harare,
           bricks prices in harare,
           get floor plans in zimbabwe,
@@ -25,7 +23,6 @@
           riversand,
           pitsand,
           bricks,
-          cement,
           construction in zimbabwe,
           building a house in zimbabwe">
     <meta name="author" content="BuildMate Zimbabwe">
@@ -34,7 +31,7 @@
     <meta property="og:site_name" content="BuildMate Zimbabwe">
     <meta property="og:title" content="BuildMate Zimbabwe | Construction Materials Nationwide (Coming 2025)">
     <meta property="og:description"
-          content="Premier supplier of bricks, cement, sand & stones with nationwide transport services. Launching soon across Zimbabwe.">
+          content="Premier supplier of bricks, sand & stones with nationwide transport services. Launching soon across Zimbabwe.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://www.buildmate.co.zw/">
     <meta property="og:image" content="https://www.buildmate.co.zw/images/logo-horizontal.jpg">
@@ -43,7 +40,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="BuildMate Zimbabwe | Construction Materials (Coming 2025)">
     <meta name="twitter:description"
-          content="Nationwide supplier of quality bricks, cement, sand & stones with reliable transport. Launching soon!">
+          content="Nationwide supplier of quality bricks, sand & stones with reliable transport. Launching soon!">
 
     <!-- Canonical URL -->
     <link rel="canonical" href="https://www.buildmate.co.zw/">
@@ -340,13 +337,6 @@
                 <li>Botswana Bricks</li>
             </ul>
             <a href="bricks.html" class="cta-button" style="display: inline-block; margin-top: 15px; padding: 8px 15px; font-size: 0.9rem;">View All Bricks</a>
-        </div>
-        <div class="material-category">
-            <h3>Cement</h3>
-            <ul>
-                <li>PPC Cement</li>
-                <li>Khaya Cement</li>
-            </ul>
         </div>
         <div class="material-category">
             <h3>Sand & Stones</h3>
