--- a/3-4-stones.html
+++ b/3-4-stones.html
@@ -28,7 +28,7 @@
     <meta property="og:description"
           content="Top quality 3/4 stones for construction projects in Harare. Competitive prices with reliable delivery service.">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://www.buildmate.co.zw/3-4-stones">
+    <meta property="og:url" content="https://www.buildmate.co.zw/3-4-stones.html">
     <meta property="og:image" content="https://www.buildmate.co.zw/images/3-4-stones-harare.jpg">
 
     <!-- Twitter Card -->
@@ -38,7 +38,7 @@
           content="Get high-quality 3/4 stones for your construction projects in Harare. Competitive prices with reliable delivery.">
 
     <!-- Canonical URL -->
-    <link rel="canonical" href="https://www.buildmate.co.zw/3-4-stones">
+    <link rel="canonical" href="https://www.buildmate.co.zw/3-4-stones.html">
 
     <!-- Favicon -->
     <link rel="icon" href="favicon.ico" type="image/x-icon">
