--- a/bricks.html
+++ b/bricks.html
@@ -30,7 +30,7 @@
     <meta property="og:description"
           content="Premium bricks in Harare - compressed, common, load bearing, face bricks & Botswana bricks. Competitive prices with reliable delivery.">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://www.buildmate.co.zw/bricks">
+    <meta property="og:url" content="https://www.buildmate.co.zw/bricks.html">
     <meta property="og:image" content="https://www.buildmate.co.zw/images/bricks-harare.jpg">
 
     <!-- Twitter Card -->
@@ -40,7 +40,7 @@
           content="Get all types of bricks in Harare - compressed, common, load bearing, face bricks & Botswana bricks. Competitive prices with reliable delivery.">
 
     <!-- Canonical URL -->
-    <link rel="canonical" href="https://www.buildmate.co.zw/bricks">
+    <link rel="canonical" href="https://www.buildmate.co.zw/bricks.html">
 
     <!-- Favicon -->
     <link rel="icon" href="favicon.ico" type="image/x-icon">
@@ -74,7 +74,7 @@
             },
             "offers": {
                 "@type": "Offer",
-                "url": "https://www.buildmate.co.zw/bricks",
+                "url": "https://www.buildmate.co.zw/bricks.html",
                 "priceCurrency": "USD",
                 "availability": "https://schema.org/InStock"
             }
