--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
 <nav class="main-nav">
     <div class="nav-container">
         <a href="bricks.html" class="nav-link">Bricks</a>
-        <a href="stones.html" class="nav-link">3/4 Stones</a>
+        <a href="3-4-stones.html" class="nav-link">3/4 Stones</a>
         <a href="riversand.html" class="nav-link">Riversand</a>
         <a href="pitsand.html" class="nav-link">Pitsand</a>
     </div>
@@ -348,7 +348,7 @@
             <div style="margin-top: 15px;">
                 <a href="pitsand.html" class="cta-button" style="display: inline-block; padding: 8px 15px; font-size: 0.9rem; margin-right: 10px;">Pitsand</a>
                 <a href="riversand.html" class="cta-button" style="display: inline-block; padding: 8px 15px; font-size: 0.9rem; margin-right: 10px;">Riversand</a>
-                <a href="stones.html" class="cta-button" style="display: inline-block; padding: 8px 15px; font-size: 0.9rem;">3/4 Stones</a>
+                <a href="3-4-stones.html" class="cta-button" style="display: inline-block; padding: 8px 15px; font-size: 0.9rem;">3/4 Stones</a>
             </div>
         </div>
     </div>
