--- a/pitsand.html
+++ b/pitsand.html
@@ -28,7 +28,7 @@
     <meta property="og:description"
           content="Top quality pitsand for construction and plastering projects in Harare. Competitive prices with reliable delivery service.">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://www.buildmate.co.zw/pitsand">
+    <meta property="og:url" content="https://www.buildmate.co.zw/pitsand.html">
     <meta property="og:image" content="https://www.buildmate.co.zw/images/pitsand-harare.jpg">
 
     <!-- Twitter Card -->
@@ -38,7 +38,7 @@
           content="Get high-quality pitsand for your construction and plastering projects in Harare. Competitive prices with reliable delivery.">
 
     <!-- Canonical URL -->
-    <link rel="canonical" href="https://www.buildmate.co.zw/pitsand">
+    <link rel="canonical" href="https://www.buildmate.co.zw/pitsand.html">
 
     <!-- Favicon -->
     <link rel="icon" href="favicon.ico" type="image/x-icon">
@@ -72,7 +72,7 @@
             },
             "offers": {
                 "@type": "Offer",
-                "url": "https://www.buildmate.co.zw/pitsand",
+                "url": "https://www.buildmate.co.zw/pitsand.html",
                 "priceCurrency": "USD",
                 "availability": "https://schema.org/InStock"
             }
