trying to merge styles

--- a/3-4-stones.html
+++ b/3-4-stones.html
@@ -28,7 +28,7 @@
     <meta property="og:description"
           content="Top quality 3/4 stones for construction projects in Harare. Competitive prices with reliable delivery service.">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://www.buildmate.co.zw/3-4-stones.html">
+    <meta property="og:url" content="https://www.buildmate.co.zw/stones.html">
     <meta property="og:image" content="https://www.buildmate.co.zw/images/3-4-stones-harare.jpg">
 
     <!-- Twitter Card -->
@@ -38,7 +38,7 @@
           content="Get high-quality 3/4 stones for your construction projects in Harare. Competitive prices with reliable delivery.">
 
     <!-- Canonical URL -->
-    <link rel="canonical" href="https://www.buildmate.co.zw/3-4-stones.html">
+    <link rel="canonical" href="https://www.buildmate.co.zw/3-4-stones">
 
     <!-- Favicon -->
     <link rel="icon" href="favicon.ico" type="image/x-icon">
@@ -80,202 +80,7 @@
     </script>
 
     <title>Quality 3/4 Stones in Harare | Buy Construction Stones | BuildMate Zimbabwe</title>
-
-    <style>
-        :root {
-            --primary: #1A237E;
-            --accent: #FF9800;
-            --dark: #1a1a1a;
-            --light: #f8f9fa;
-        }
-
-        body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            line-height: 1.6;
-            color: var(--dark);
-            margin: 0;
-            padding: 0;
-            background: var(--light);
-        }
-
-        .contact-bar {
-            background: var(--dark);
-            color: white;
-            padding: 12px;
-            text-align: center;
-            font-size: 1.1rem;
-        }
-
-        .contact-bar a {
-            color: var(--accent);
-            text-decoration: none;
-            font-weight: bold;
-        }
-
-        header {
-            background: var(--primary);
-            color: white;
-            padding: 2rem 0;
-            text-align: center;
-        }
-
-        .logo {
-            text-align: center;
-            margin-bottom: 0.2rem;
-        }
-
-        .logo-img {
-            height: 150px;
-        }
-
-        .company-name {
-            font-size: 2.2rem;
-            font-weight: 700;
-            text-align: center;
-            margin-bottom: 0.5rem;
-        }
-
-        .tagline {
-            font-size: 1.2rem;
-            opacity: 0.9;
-        }
-
-        .content-container {
-            max-width: 1000px;
-            margin: 2rem auto;
-            padding: 0 20px;
-        }
-
-        h1 {
-            color: var(--primary);
-            font-size: 2rem;
-            margin-bottom: 1.5rem;
-            text-align: center;
-        }
-
-        h2 {
-            color: var(--primary);
-            font-size: 1.5rem;
-            margin-top: 2rem;
-        }
-
-        .product-hero {
-            display: flex;
-            flex-wrap: wrap;
-            gap: 2rem;
-            margin: 2rem 0;
-            align-items: center;
-        }
-
-        .product-image {
-            flex: 1;
-            min-width: 300px;
-        }
-
-        .product-image img {
-            width: 100%;
-            border-radius: 8px;
-            box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
-        }
-
-        .product-details {
-            flex: 1;
-            min-width: 300px;
-        }
-
-        .price-badge {
-            background: var(--accent);
-            color: white;
-            padding: 15px;
-            border-radius: 5px;
-            font-size: 1.3rem;
-            font-weight: bold;
-            text-align: center;
-            margin: 1rem 0;
-        }
-
-        .benefits-list {
-            background: white;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 3px 10px rgba(0, 0, 0, 0.1);
-            margin: 2rem 0;
-        }
-
-        .benefits-list ul {
-            padding-left: 20px;
-        }
-
-        .benefits-list li {
-            margin-bottom: 10px;
-        }
-
-        .delivery-info {
-            background: var(--primary);
-            color: white;
-            padding: 20px;
-            border-radius: 8px;
-            margin: 2rem 0;
-        }
-
-        .delivery-info h3 {
-            color: white;
-            margin-top: 0;
-        }
-
-        .cta-box {
-            background: var(--accent);
-            color: white;
-            padding: 2rem;
-            border-radius: 8px;
-            margin: 3rem 0;
-            text-align: center;
-        }
-
-        .cta-button {
-            display: inline-block;
-            background: var(--primary);
-            color: white;
-            padding: 12px 30px;
-            border-radius: 5px;
-            text-decoration: none;
-            font-weight: bold;
-            font-size: 1.1rem;
-            margin-top: 1rem;
-            transition: all 0.3s;
-        }
-
-        .cta-button:hover {
-            transform: translateY(-3px);
-            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
-        }
-
-        footer {
-            background: var(--dark);
-            color: white;
-            text-align: center;
-            padding: 2rem 0;
-            margin-top: 3rem;
-        }
-
-        @media (max-width: 768px) {
-            .logo-img {
-                height: 100px;
-            }
-
-            .company-name {
-                font-size: 1.8rem;
-            }
-
-            .tagline {
-                font-size: 1rem;
-            }
-
-            .contact-bar {
-                font-size: 0.9rem;
-            }
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 <!-- Google Tag Manager (noscript) -->
@@ -286,17 +91,26 @@
 <!-- End Google Tag Manager (noscript) -->
 <!-- Contact Bar -->
 <div class="contact-bar">
-    For 3/4 stones inquiries in Harare: <a href="tel:+263782135087">+263 78 213 5087</a> | Sunway City, Harare
+    Coming August 2025! For inquiries: <a href="tel:+263782135087">+263 78 213 5087</a> | Sunway City, Harare
 </div>
+
+<!-- Navigation -->
+<nav class="main-nav">
+    <div class="nav-container">
+        <a href="index.html" class="nav-link">Home</a>
+        <a href="bricks.html" class="nav-link">Bricks</a>
+        <a href="3-4-stones.html" class="nav-link">3/4 Stones</a>
+        <a href="riversand.html" class="nav-link">Riversand</a>
+        <a href="pitsand.html" class="nav-link">Pitsand</a>
+    </div>
+</nav>
 
 <!-- Header -->
 <header>
-    <div class="content-container">
+    <div class="coming-soon-container">
         <div class="logo">
             <img src="logo-horizontal.jpg" alt="BuildMate Zimbabwe Logo" class="logo-img">
         </div>
-        <div class="company-name">BuildMate Zimbabwe</div>
-        <div class="tagline">Quality Construction Materials in Harare</div>
     </div>
 </header>
 
