--- a/3-4-stones.html
+++ b/3-4-stones.html
@@ -120,7 +120,7 @@
 
     <div class="product-hero">
         <div class="product-image">
-            <img src="images/3-4-stones-harare.jpg" alt="High quality 3/4 stones in Harare">
+            <img src="images/3-4-stones.jpg" alt="High quality 3/4 stones in Harare">
         </div>
         <div class="product-details">
             <h2>Premium Construction Stones</h2>
