--- a/bricks.html
+++ b/bricks.html
@@ -122,7 +122,7 @@
 
     <div class="product-hero">
         <div class="product-image">
-            <img src="images/bricks-harare.jpg" alt="High quality bricks in Harare">
+            <img src="images/bricks.jpg" alt="High quality bricks in Harare">
         </div>
         <div class="product-details">
             <h2>Premium Construction Bricks</h2>
