--- a/pitsand.html
+++ b/pitsand.html
@@ -120,7 +120,7 @@
 
     <div class="product-hero">
         <div class="product-image">
-            <img src="images/pitsand-harare.jpg" alt="High quality pitsand in Harare">
+            <img src="images/pitsand.jpg" alt="High quality pitsand in Harare">
         </div>
         <div class="product-details">
             <h2>Premium Construction Pitsand</h2>
