--- a/riversand.html
+++ b/riversand.html
@@ -120,7 +120,7 @@
 
     <div class="product-hero">
         <div class="product-image">
-            <img src="images/riversand-harare.jpg" alt="High quality riversand in Harare">
+            <img src="images/riversand.jpg" alt="High quality riversand in Harare">
         </div>
         <div class="product-details">
             <h2>Quality Construction Riversand</h2>
