--- a/bricks.html
+++ b/bricks.html
@@ -31,7 +31,7 @@
           content="Premium bricks in Harare - compressed, common, load bearing, face bricks & Botswana bricks. Competitive prices with reliable delivery.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://www.buildmate.co.zw/bricks.html">
-    <meta property="og:image" content="https://www.buildmate.co.zw/images/bricks-harare.jpg">
+    <meta property="og:image" content="https://www.buildmate.co.zw/images/bricks.jpg">
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
