--- a/pitsand.html
+++ b/pitsand.html
@@ -29,7 +29,7 @@
           content="Top quality pitsand for construction and plastering projects in Harare. Competitive prices with reliable delivery service.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://www.buildmate.co.zw/pitsand.html">
-    <meta property="og:image" content="https://www.buildmate.co.zw/images/pitsand-harare.jpg">
+    <meta property="og:image" content="https://www.buildmate.co.zw/images/pitsand.jpg">
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
