--- a/3-4-stones.html
+++ b/3-4-stones.html
@@ -28,8 +28,8 @@
     <meta property="og:description"
           content="Top quality 3/4 stones for construction projects in Harare. Competitive prices with reliable delivery service.">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://www.buildmate.co.zw/stones.html">
-    <meta property="og:image" content="https://www.buildmate.co.zw/images/3-4-stones-harare.jpg">
+    <meta property="og:url" content="https://www.buildmate.co.zw/3-4-stones.html">
+    <meta property="og:image" content="https://www.buildmate.co.zw/images/3-4-stones.jpg">
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
@@ -38,7 +38,7 @@
           content="Get high-quality 3/4 stones for your construction projects in Harare. Competitive prices with reliable delivery.">
 
     <!-- Canonical URL -->
-    <link rel="canonical" href="https://www.buildmate.co.zw/3-4-stones">
+    <link rel="canonical" href="https://www.buildmate.co.zw/3-4-stones.html">
 
     <!-- Favicon -->
     <link rel="icon" href="favicon.ico" type="image/x-icon">
@@ -72,7 +72,7 @@
             },
             "offers": {
                 "@type": "Offer",
-                "url": "https://www.buildmate.co.zw/3-4-stones",
+                "url": "https://www.buildmate.co.zw/3-4-stones.html",
                 "priceCurrency": "USD",
                 "availability": "https://schema.org/InStock"
             }
