--- a/riversand.html
+++ b/riversand.html
@@ -29,7 +29,7 @@
           content="Top quality washed riversand for construction projects in Harare. Competitive prices with reliable delivery service.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://www.buildmate.co.zw/riversand.html">
-    <meta property="og:image" content="https://www.buildmate.co.zw/images/riversand-harare.jpg">
+    <meta property="og:image" content="https://www.buildmate.co.zw/images/riversand.jpg">
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
