refactor seo for homepage

--- a/3-4-stones.html
+++ b/3-4-stones.html
@@ -8,6 +8,7 @@
           content="Buy quality 3/4 stones in Harare at competitive prices. BuildMate Zimbabwe offers premium construction stones with reliable delivery across Harare.">
     <meta name="keywords"
           content="
+          cost of 3/4 stones in harare,
           3/4 stones harare,
           buy 3/4 stones in harare,
           3/4 stones prices harare,
@@ -207,7 +208,7 @@
 <footer>
     <div class="content-container">
         <p>&copy; 2025 BuildMate Zimbabwe. All rights reserved.</p>
-        <p>4578 Rockview 1D, Sunway City, Harare</p>
+        <p>Sunway City, Harare</p>
         <p>Email: <a href="mailto:sales@buildmate.co.zw" style="color: var(--accent);">sales@buildmate.co.zw</a> |
             Phone: <a href="tel:+263782135087" style="color: var(--accent);">+263 78 213 5087</a></p>
         <p style="margin-top: 1rem;">
