--- a/bricks.html
+++ b/bricks.html
@@ -8,6 +8,7 @@
           content="Buy all types of bricks in Harare - compressed, common, load bearing, face bricks & Botswana bricks. BuildMate Zimbabwe offers quality bricks at competitive prices.">
     <meta name="keywords"
           content="
+          cost of bricks in harare,
           bricks harare,
           buy bricks in harare,
           bricks prices harare,
@@ -240,7 +241,7 @@
 <footer>
     <div class="content-container">
         <p>&copy; 2025 BuildMate Zimbabwe. All rights reserved.</p>
-        <p>4578 Rockview 1D, Sunway City, Harare</p>
+        <p>Sunway City, Harare</p>
         <p>Email: <a href="mailto:sales@buildmate.co.zw" style="color: var(--accent);">sales@buildmate.co.zw</a> |
             Phone: <a href="tel:+263782135087" style="color: var(--accent);">+263 78 213 5087</a></p>
         <p style="margin-top: 1rem;">
