--- a/index.html
+++ b/index.html
@@ -8,21 +8,12 @@
           content="BuildMate Zimbabwe - Coming August 2025! Nationwide supplier of bricks, sand & stones. Transport services across Zimbabwe. Launching in 2025.">
     <meta name="keywords"
           content="
-          where to buy 3/4 stones in harare,
-          3/4 stones prices in harare,
-          where to buy riversand in harare,
-          riversand prices in harare,
-          where to buy pitsand in harare,
-          pitsand prices in harare,
-          where to buy bricks in harare,
-          bricks prices in harare,
+          buy building materials online,
+          zimbabwe construction materials,
+          zimbabwe building materials suppliers,
+          building materials prices in zimbabwe,
           get floor plans in zimbabwe,
           get a bill of quantities in zimbabwe,
-          building materials prices in zimbabwe,
-          3/4 stones
-          riversand,
-          pitsand,
-          bricks,
           construction in zimbabwe,
           building a house in zimbabwe">
     <meta name="author" content="BuildMate Zimbabwe">
@@ -211,7 +202,7 @@
 <footer>
     <div class="coming-soon-container">
         <p>&copy; 2025 BuildMate Zimbabwe. All rights reserved.</p>
-        <p>4578 Rockview 1D, Sunway City, Harare</p>
+        <p>Sunway City, Harare</p>
         <p>Email: <a href="mailto:sales@buildmate.co.zw" style="color: var(--accent);">sales@buildmate.co.zw</a> |
             Phone: <a href="tel:+263782135087" style="color: var(--accent);">+263 78 213 5087</a></p>
         <p style="margin-top: 1rem;">
