--- a/pitsand.html
+++ b/pitsand.html
@@ -8,6 +8,7 @@
           content="Buy quality Pitsand in Harare at competitive prices. BuildMate Zimbabwe offers premium pitsand for construction with reliable delivery across Harare.">
     <meta name="keywords"
           content="
+          cost of pitsand in harare,
           pitsand harare,
           buy pitsand in harare,
           pitsand prices harare,
@@ -208,7 +209,7 @@
 <footer>
     <div class="content-container">
         <p>&copy; 2025 BuildMate Zimbabwe. All rights reserved.</p>
-        <p>4578 Rockview 1D, Sunway City, Harare</p>
+        <p>Sunway City, Harare</p>
         <p>Email: <a href="mailto:sales@buildmate.co.zw" style="color: var(--accent);">sales@buildmate.co.zw</a> |
             Phone: <a href="tel:+263782135087" style="color: var(--accent);">+263 78 213 5087</a></p>
         <p style="margin-top: 1rem;">
