--- a/riversand.html
+++ b/riversand.html
@@ -8,6 +8,7 @@
           content="Buy high-quality Riversand in Harare at competitive prices. BuildMate Zimbabwe offers premium washed riversand for construction with reliable delivery across Harare.">
     <meta name="keywords"
           content="
+          cost of riversand in harare,
           riversand harare,
           buy riversand in harare,
           riversand prices harare,
@@ -203,7 +204,7 @@
 <footer>
     <div class="content-container">
         <p>&copy; 2025 BuildMate Zimbabwe. All rights reserved.</p>
-        <p>4578 Rockview 1D, Sunway City, Harare</p>
+        <p>Sunway City, Harare</p>
         <p>Email: <a href="mailto:sales@buildmate.co.zw" style="color: var(--accent);">sales@buildmate.co.zw</a> |
             Phone: <a href="tel:+263782135087" style="color: var(--accent);">+263 78 213 5087</a></p>
         <p style="margin-top: 1rem;">
