--- a/index.html
+++ b/index.html
@@ -78,7 +78,24 @@
                 "opens": "07:30",
                 "closes": "17:00"
             },
-            "description": "Coming  August 2025 - Nationwide supplier of construction materials and transport services across Zimbabwe."
+            "description": "Coming  August 2025 - Nationwide supplier of construction materials and transport services across Zimbabwe.",
+            "potentialAction": [
+                {
+                    "@type": "OrderAction",
+                    "target": "https://buildmate.co.zw/",
+                    "name": "Order Construction Materials"
+                },
+                {
+                    "@type": "FollowAction",
+                    "target": "https://twitter.com/buildmatezw"
+                },
+                {
+                    "@type": "ReadAction",
+                    "target": [
+                        "https://buildmate.co.zw/index.html"
+                    ]
+                }
+            ]
         }
     </script>
 
