--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 "opens": "07:30",
                 "closes": "17:00"
             },
-            "description": "Coming  August 2025 - Nationwide supplier of construction materials and transport services across Zimbabwe.",
+            "description": "BuildMate Zimbabwe is your premier supplier of quality construction materials including bricks, sand & stones. We offer reliable delivery services across all provinces.",
             "potentialAction": [
                 {
                     "@type": "OrderAction",
