change SEO logo

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             "@context": "https://schema.org",
             "@type": "ConstructionBusiness",
             "name": "BuildMate Zimbabwe",
-            "image": "https://www.buildmate.co.zw/logo-horizontal.jpg",
+            "image": "https://www.buildmate.co.zw/images/logo.png",
             "@id": "https://www.buildmate.co.zw",
             "url": "https://www.buildmate.co.zw",
             "telephone": "+263782135087",
